# upsc-agentic-ai

./: .gitignore  README.md  main.py  pyproject.toml  readme1.md  render.yaml
.github/workflows/: android-apk.yml
data/mentor_kb/: upsc_facts.md
mobile/: README-BUILD.md  capacitor.config.json  package-lock.json  package.json
mobile/www/: index.html
scripts/: ingest_mentor_kb.py
src/agents/: __init__.py
src/agents/current_affairs/: __init__.py  graph.py  ingest.py  monthly_ingest.py  prompts.py
src/agents/evaluator/: __init__.py  graph.py  prompts.py
src/agents/lecture/: __init__.py  graph.py  prompts.py
src/agents/mentor/: __init__.py  graph.py  prompts.py
src/agents/ncert/: __init__.py  graph.py  prompts.py
src/agents/planner/: constants.py  graph.py  prompts.py
src/agents/pyq/: __init__.py  graph.py  prompts.py
src/api/: deps.py  main.py  rate_limit.py  upload_limit.py
src/core/: __init__.py  config.py  db.py  email_utils.py  history.py  llm.py  logging_config.py  mentor_kb.py  models.py  observability.py  reset_tokens.py  security.py  study_aids.py  users.py  vector_store.py  verification_tokens.py
src/eval/: __init__.py  eval_dataset.json  llm_eval.py
src/graph/: agent_subgraphs.py  app_graph.py  memory.py  mentor_graph.py  rag_graph.py  state.py  supervisor.py
src/models/: schemas.py
tests/: .gitignore  conftest.py  test_smoke_auth.py  test_smoke_health.py  test_smoke_lecture_relevance.py  test_smoke_pyq_parser.py
upsc-frontend/: app-frontend.html  index.html  landing.html  manifest.json  service-worker.js
(+16 files in other folders)
