[project]
name = "upsc-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg-pool>=3.3.1",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.6.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
